GRAMMAR.txt
/* --- Top Level Statements --- */
Program ::= (BlueprintDecl | FunctionDecl | PrintStmt)*

/* --- Types --- */
ParamType ::= "i32" | "bool"
Type ::= ParamType | "void"

/* --- Blueprint Specification --- */
BlueprintDecl ::= "blueprint" Identifier "{"
                    "input:" ParamMapList ";"
                    "output:" Type ";"
                    (DefaultClause)*
                    (RequiresClause)*
                    (EnsuresClause)*
                  "}"

ParamMapList ::= (Identifier ":" Type ("," Identifier ":" Type)*)?

DefaultClause  ::= "default:" Expression "==>" Expression ";"
RequiresClause ::= "requires:" Expression ";"
EnsuresClause  ::= "ensures:" Expression ";"

/* --- Function Implementation --- */
FunctionDecl ::= "function" Type Identifier "(" FunctionParamList ")" Statement

FunctionParamList ::= (Type Identifier ("," Type Identifier)*)?

/* --- Statements --- */
Statement ::= "{" (Statement)* "}"
			| VarDeclStmt
            | AssignStmt
            | IfStmt
            | WhileStmt
            | ReturnStmt
			| PrintStmt
            | ExitStmt
            | AssertStmt

VarDeclStmt ::= Type Identifier "=" Expression ";"
AssignStmt  ::= Identifier "=" Expression ";"
IfStmt      ::= "if" "(" Expression ")" Block ("else" (IfStmt | Block))?
WhileStmt   ::= "while" "(" Expression ")" Block
ReturnStmt  ::= "return" Expression? ";"
PrintStmt   ::= "print" "(" Expression ")" ";"
ExitStmt    ::= "exit" "(" Expression ")" ";"
AssertStmt  ::= "assert" "(" Expression ")" ";"

/* --- Expressions --- */
Expression ::= LogicalOrExpr

LogicalOrExpr       ::= LogicalAndExpr ("||" LogicalAndExpr)*
LogicalAndExpr      ::= EqualityExpr ("&&" EqualityExpr)*
EqualityExpr        ::= RelationalExpr (("==" | "!=") RelationalExpr)*
RelationalExpr      ::= AdditiveExpr (("<" | "<=" | ">" | ">=") AdditiveExpr)*
AdditiveExpr        ::= MultiplicativeExpr (("+" | "-") MultiplicativeExpr)*
MultiplicativeExpr  ::= UnaryExpr (("*" | "/" | "%") UnaryExpr)*

UnaryExpr ::= ("!" | "-") UnaryExpr 
            | PrimaryExpr

PrimaryExpr ::= IntegerLiteral
              | BooleanLiteral
              | Identifier
              | FunctionCall
              | "(" Expression ")"

FunctionCall ::= Identifier "(" ArgList ")"
ArgList    ::= (Expression ("," Expression)*)?

/* --- Lexical Tokens --- */
IntegerLiteral ::= [0-9]+
BooleanLiteral ::= "true" | "false"
Identifier     ::= [a-zA-Z][a-zA-Z0-9]* 
